<resources>
    <string name="app_name">BIT Space</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_here">Register Here</string>
    <string name="login_here">Login Here</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>

    <!--    Details Input Screen -->
    <string name="course_input">Course</string>
    <string name="submit">Submit</string>
    <string name="branch_input">Branch</string>
    <string name="bath_input">Batch</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_format">%$1d-%$2d-%$3d</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="qr_code">QR Code</string>
    <string name="logout">Logout</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="issues">Issues</string>

    <!--    Issues screen -->
    <string name="report_issue">Report Issue</string>
    <string name="no_issues_reported">No issues reported!</string>
    <string name="description">Description</string>
    <string name="enter_issue_title_here">Enter issue title here</string>
    <string name="title">Title</string>
    <string name="enter_issue_description">Enter issue description</string>
    <string name="about_us">About Us</string>
    <string name="post_image">Post Image</string>
    <string name="what_do_you_want_to_post">What do you want to Post?</string>
    <string name="notice">Notice</string>
    <string name="event">Event</string>
    <string name="job_intern">Job || Intern</string>
    <string name="quote">Quote</string>
    <string name="publish">Publish</string>
    <string name="please_enter_the_notice_content_here">Please enter the notice content here.</string>
    <string name="enter_the_notice_title_here">Enter the Notice title here</string>
    <string name="verify_both_filled"><![CDATA[Please make sure that both Title & Body are filled!]]></string>
    <string name="register">Register</string>
    <string name="event_image">Event Image</string>
    <string name="registration_form_url">Registration form URL</string>
    <string name="choose_image">Choose Image</string>
    <string name="enter_you_quote_here">Enter you Quote here..</string>
    <string name="post">Post</string>
</resources>