<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".view.issue.IssueFragment">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        android:padding="12dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_accent" />

    <TextView
        android:id="@+id/issue_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vt_regular"
        android:text="@string/report_issue"
        android:textColor="@color/primary_accent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:alpha="0.5"
        android:background="#E5E5E5"
        app:layout_constraintTop_toBottomOf="@id/back_btn" />

    <TextView
        android:id="@+id/issue_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_btn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/issue_title_input"
        style="@style/OutlineTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="@dimen/input_gap"
        android:padding="2dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/issue_title_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_issue_title_here"
            android:textColor="@color/primary_accent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/issue_description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/issue_title_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/issue_description_input"
        style="@style/OutlineTextInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="18dp"
        android:layout_marginVertical="@dimen/input_gap"
        android:autofillHints="username"
        android:orientation="vertical"
        android:padding="2dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintTop_toBottomOf="@id/issue_description_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/enter_issue_description"
            android:textColor="@color/primary_accent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/primary_accent"
        app:cornerRadius="@dimen/inp_corner_rad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/issue_description_input"
        app:layout_constraintStart_toStartOf="@+id/issue_description_input" />

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:background="#9C000000">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>