<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".view.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_logo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/right_guide"
            app:layout_constraintStart_toStartOf="@id/left_guide"
            android:hapticFeedbackEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/top_guide" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.32" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.68" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            style="@style/OutlineTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="64dp"
            android:autofillHints="emailAddress"
            app:layout_constraintTop_toBottomOf="@+id/login_logo"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/primary_accent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            style="@style/OutlineTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="14dp"
            android:autofillHints="emailAddress"
            app:layout_constraintTop_toBottomOf="@+id/email_input"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock"
            app:passwordToggleDrawable="@drawable/password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/primary_accent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_btn"
            style="@style/SolidButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input" />

        <TextView
            android:id="@+id/have_acc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintEnd_toEndOf="@id/password_input"
            app:layout_constraintStart_toStartOf="@id/password_input"
            app:layout_constraintTop_toBottomOf="@id/sign_in_btn" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_here"
            android:textColor="@color/primary_accent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/password_input"
            app:layout_constraintStart_toStartOf="@id/password_input"
            android:hapticFeedbackEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/have_acc_txt" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>