<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.DetailInputFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="48dp">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_student_info"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/right_guide"
            app:layout_constraintStart_toStartOf="@id/left_guide"
            app:layout_constraintTop_toBottomOf="@id/top_guide" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.32" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.025" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.68" />

        <LinearLayout
            android:id="@+id/input_layout_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/login_logo">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/course_input"
                style="@style/OutlineTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/login_logo"
                app:startIconDrawable="@drawable/ic_grad_cap">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:hint="@string/course_input"
                    android:textColor="@color/primary_accent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/branch_input"
                style="@style/OutlineTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_gap"
                android:autofillHints="username"
                android:orientation="vertical"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/login_logo"
                app:startIconDrawable="@drawable/ic_certificate">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:hint="@string/branch_input"
                    android:textColor="@color/primary_accent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/batch_input"
                style="@style/OutlineTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_gap"
                android:autofillHints="username"
                android:orientation="vertical"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/login_logo"
                app:startIconDrawable="@drawable/ic_medal">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:hint="@string/bath_input"
                    android:textColor="@color/primary_accent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dob_input"
                style="@style/OutlineTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_gap"
                android:autofillHints="username"
                android:orientation="vertical"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/login_logo"
                app:startIconDrawable="@drawable/ic_calender">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date_of_birth"
                    android:textColor="@color/primary_accent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gender_input"
                style="@style/OutlineTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_gap"
                android:autofillHints="username"
                android:orientation="vertical"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/login_logo"
                app:startIconDrawable="@drawable/ic_gender">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusableInTouchMode="false"
                    android:hint="@string/gender"
                    android:textColor="@color/primary_accent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_input"
                style="@style/OutlineTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_gap"
                android:autofillHints="phone"
                android:orientation="vertical"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/login_logo"
                app:startIconDrawable="@drawable/ic_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColor="@color/primary_accent" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="18dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="10dp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@color/primary_accent"
            app:cornerRadius="@dimen/inp_corner_rad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_ll" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>