<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".view.post.CreateEventFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:alpha="0.5"
        android:background="@color/border_line"
        app:layout_constraintTop_toBottomOf="@id/back_btn" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        android:padding="12dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_accent" />

    <TextView
        android:id="@+id/event_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:transitionName="@string/event"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn" />

    <ImageView
        android:id="@+id/choose_image_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_upload_img"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:layout_editor_absoluteX="18dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choose_img_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="18dp"
        android:text="@string/choose_image"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/error_red"
        app:cornerRadius="180dp"
        app:layout_constraintTop_toBottomOf="@+id/choose_image_iv"
        tools:layout_editor_absoluteX="18dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/event_url_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="@dimen/input_gap"
        android:autofillHints="emailAddress"
        app:boxStrokeColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/publish_btn"
        app:layout_constraintTop_toBottomOf="@+id/choose_image_iv"
        app:layout_constraintVertical_bias="0.888"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/registration_form_url"
            android:textColor="@color/primary_text_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/publish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:text="@string/publish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/primary_accent"
        app:cornerRadius="@dimen/inp_corner_rad"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9C000000"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>