<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".view.post.CreateNoticeFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:alpha="0.5"
        android:background="@color/border_line"
        app:layout_constraintTop_toBottomOf="@id/back_btn" />

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:contentDescription="@null"
        android:focusable="true"
        android:padding="12dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_accent" />

    <TextView
        android:id="@+id/notice_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notice"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:transitionName="@string/notice"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notice_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="28dp"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/notice_tv"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="114dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:hint="@string/enter_the_notice_title_here"
            android:padding="4dp"
            android:textColor="@color/primary_text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Induction session for Coding Society" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notice_description_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="@dimen/input_gap"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        app:boxBackgroundMode="none"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/submit_btn"
        app:layout_constraintTop_toBottomOf="@id/notice_title_input">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="top"
            android:hint="@string/please_enter_the_notice_content_here"
            android:paddingTop="0dp"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp"
            tools:text="CodeSoc BIT Deoghar is going to organize the induction session for 2022 batch on:
1st of this month.\n\nAll the stakeholders are adviced to be present there.
\n\nDr. SP\nFaculty Advisor\nCodeSoc BIT’D" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="10dp"
        android:text="@string/publish"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/primary_accent"
        app:cornerRadius="@dimen/inp_corner_rad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/notice_description_input"
        app:layout_constraintStart_toStartOf="@+id/notice_description_input" />

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9C000000"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>